force-app/main/default/objects/PDRI__Metadata_Subcomponent_Deployment_Result__c/PDRI__Metadata_Subcomponent_Deployment_Result__c.object-meta.xml
<CustomObject>
    <label>Metadata Subcomponent Deployment Result</label>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Subcomponent Deployment Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>