force-app/main/default/objects/PDRI__Metadata_Subcomponent_Deployment_Result__c/fields/PDRI__Metadata_Component_Deployment_Result__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Metadata_Component_Deployment_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Metadata Component Deployment Result</label>
    <referenceTo>PDRI__Metadata_Component_Deployment_Result__c</referenceTo>
    <relationshipLabel>Metadata Subcomponent Deployment Results</relationshipLabel>
    <relationshipName>Metadata_Subcomponent_Deployment_Results</relationshipName>
    <type>Lookup</type>
</CustomField>