force-app/main/default/objects/PDRI__Metadata_Subcomponent_Deployment_Result__c/fields/PDRI__Operation__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Operation__c</fullName>
    <label>Operation</label>
    <length>25</length>
    <type>Text</type>
</CustomField>