force-app/main/default/objects/PDRI__Metadata_Subcomponent_Deployment_Result__c/fields/PDRI__Subcomponent_Label__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Subcomponent_Label__c</fullName>
    <label>Subcomponent Label</label>
    <type>TextArea</type>
</CustomField>